--- a/src/app/components/book-appointment/book-appointment.component.html
+++ b/src/app/components/book-appointment/book-appointment.component.html
@@ -16,6 +16,12 @@
   </div>
 </section>
 
+<!-- Booking Form -->
+<section class="px-4 pt-20">
+  <div>
+    <app-booking-form></app-booking-form>
+  </div>
+</section>
 <!-- Booking Policies -->
 <section>
   <div
@@ -27,13 +33,6 @@
     <p class="sub-head uppercase text-sm sm:text-base md:text-lg">
       No walk-ins // BY APPOINTMENT ONLY
     </p>
-  </div>
-</section>
-
-<!-- Booking Form -->
-<section class="px-4">
-  <div>
-    <app-booking-form></app-booking-form>
   </div>
 </section>
 
@@ -68,6 +67,46 @@
       <p class="txt">
         You may cancel at least 24-48 hours in advance. Missing an appointment
         without prior notice means forfeiting initial deposit.
+      </p>
+    </div>
+  </div>
+</section>
+<section class="px-6 sm:px-10 md:px-20 lg:px-60">
+  <div class="flex flex-col md:flex-row gap-8 md:gap-30 py-20">
+    <!-- Before notes -->
+    <div class="w-full md:w-1/2 space-y-4">
+      <h1
+        class="text-xl sm:text-2xl uppercase sub-head text-center md:text-left"
+      >
+        Before you book semipermanent brow appointment here are things to note:
+      </h1>
+      <p class="txt text-base sm:text-lg text-center md:text-left">
+        You Must not be Pregnant or Nursing<br />
+        Must not History of Keloids or Hypertrophic scarring<br />
+        Must not be Diabetic (require doctor's clearance)<br />
+        Not going through Chemotherapy<br />
+        You don’t have Viral infections or diseases<br />
+        No major heart problem<br />
+        Accutane in the past 6 months<br />
+        Had Botox in the past 6 weeks<br />
+        Heart conditions, uncontrolled High Blood Pressure.<br />
+        Any treatment, medication, or illness that compromises the immune system
+        / healing would make you NOT a good candidate for semipermanent brows.
+      </p>
+    </div>
+
+    <!-- 48-hour prep -->
+    <div class="w-full md:w-1/2 space-y-4">
+      <h1
+        class="text-xl sm:text-2xl uppercase sub-head text-center md:text-left"
+      >
+        48 hours before your appointment please:
+      </h1>
+      <p class="txt text-base sm:text-lg text-center md:text-left">
+        Avoid Caffeine or Alcohol 24-48hrs of your appointment.<br />
+        Avoid skincare or oily products before coming and no facials 2 weeks
+        prior to appointment.<br />
+        Avoid Exercise day of your appointment.
       </p>
     </div>
   </div>
