--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -110,6 +110,11 @@
           >
         </li>
         <li>
+          <a routerLink="/availability" class="hover:text-rose-500"
+            >Set Availability</a
+          >
+        </li>
+        <li>
           <a routerLink="/gallery" class="hover:text-rose-500">Add Gallery</a>
         </li>
         <li>
@@ -151,11 +156,6 @@
           class="block px-4 py-2 rounded hover:bg-rose-50 text-gray-700 hover:text-rose-500"
           >Book Appointment</a
         >
-        <a
-          routerLink="/login"
-          class="block px-4 py-2 bg-rose-100 rounded-full hover:bg-rose-200 max-w-max"
-          >Login</a
-        >
       </ng-container>
 
       <ng-template #mobileLoggedIn>
@@ -173,6 +173,11 @@
           routerLink="/descriptions"
           class="block px-4 py-2 rounded hover:bg-rose-50 text-gray-700 hover:text-rose-500"
           >Add Descriptions</a
+        >
+        <a
+          routerLink="/availability"
+          class="block px-4 py-2 rounded hover:bg-rose-50 text-gray-700 hover:text-rose-500"
+          >Set Availability</a
         >
         <a
           routerLink="/gallery"
