--- a/src/app/components/services/services.component.html
+++ b/src/app/components/services/services.component.html
@@ -90,7 +90,7 @@
           </defs>
         </svg>
         <img
-          [src]="svc.imageUrl"
+          [src]="apiUrl + svc.imageUrl"
           alt="{{ svc.title }}"
           class="w-full object-cover rounded-md shadow-md z-10 relative"
         />
