--- a/src/app/components/contact-me/contact-me.component.html
+++ b/src/app/components/contact-me/contact-me.component.html
@@ -78,7 +78,7 @@
     <!-- Contact Form -->
     <div class="bg-white p-8 rounded-2xl shadow-lg">
       <h2 class="text-2xl font-medium text-gray-900 mb-6">Send me a message</h2>
-      <form class="space-y-4">
+      <form class="space-y-4" [formGroup]="form" (ngSubmit)="onSubmit()">
         <div>
           <label class="block text-sm font-medium text-gray-700 mb-1"
             >Name</label
@@ -86,6 +86,7 @@
           <input
             type="text"
             placeholder="Your name"
+            formControlName="name"
             class="w-full p-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-rose-200"
           />
         </div>
@@ -96,6 +97,18 @@
           <input
             type="email"
             placeholder="you@example.com"
+            formControlName="email"
+            class="w-full p-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-rose-200"
+          />
+        </div>
+        <div>
+          <label class="block text-sm font-medium text-gray-700 mb-1"
+            >Phone</label
+          >
+          <input
+            type="email"
+            placeholder="(123) 456 7890"
+            formControlName="phone"
             class="w-full p-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-rose-200"
           />
         </div>
@@ -106,6 +119,7 @@
           <input
             type="text"
             placeholder="Subject"
+            formControlName="subject"
             class="w-full p-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-rose-200"
           />
         </div>
@@ -116,6 +130,7 @@
           <textarea
             rows="4"
             placeholder="Write your message..."
+            formControlName="msg"
             class="w-full p-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-rose-200 resize-none"
           ></textarea>
         </div>
